classDiagram

    direction LR

    class Block {
        <<Abstract>>
        Name : string
        BlocksBefore : List~Block~
        BlocksAfter : List~Block~
        ConnectionsIn : List~Connection~
        ConnectionsOut : List~Connection~
        ContinuousStates : List~StateDeclaration~
        Inputs : List~InputDeclaration~
        Outputs : List~OutputDeclaration~
        InitializeStates(...) void
        CalculateDerivatives(...) void
        CalculateOutputs(...) void
    }

    class StateDeclaration {
    }

    class InputDeclaration {
    }

    class OutputDeclaration {
    }

    Block *-- "*" StateDeclaration : ContinuousStates
    Block *-- "*" InputDeclaration : Inputs
    Block *-- "*" OutputDeclaration : Outputs

    style StateDeclaration fill:white
    style InputDeclaration fill:white
    style OutputDeclaration fill:white